; ModuleID = '/home/carl/AnghaBench/tmux/compat/extr_imsg.c_imsg_free.c'
source_filename = "/home/carl/AnghaBench/tmux/compat/extr_imsg.c_imsg_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imsg = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i64 }

@IMSG_HEADER_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @imsg_free(%struct.imsg* %0) #0 {
  %2 = alloca %struct.imsg*, align 8
  store %struct.imsg* %0, %struct.imsg** %2, align 8
  %3 = load %struct.imsg*, %struct.imsg** %2, align 8
  %4 = getelementptr inbounds %struct.imsg, %struct.imsg* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 8
  %6 = load %struct.imsg*, %struct.imsg** %2, align 8
  %7 = getelementptr inbounds %struct.imsg, %struct.imsg* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @IMSG_HEADER_SIZE, align 8
  %11 = sub nsw i64 %9, %10
  %12 = call i32 @freezero(i32 %5, i64 %11)
  ret void
}

declare dso_local i32 @freezero(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
